<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollview_fragment_about_indian_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaceXLarge"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_headline_guide"
                style="@style/indian_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_300"
                android:text="@string/titleOne" />

            <TextView
                android:id="@+id/textview_details_guide"
                style="@style/indian_food.indian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceSmall"
                android:text="@string/blockOne" />


            <TextView
                android:id="@+id/textview_headline_history"
                style="@style/indian_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                android:text="@string/titleTwo" />

            <TextView
                android:id="@+id/textview_details_history"
                style="@style/indian_food.indian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceSmall"
                android:text="@string/blockTwo" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:background="@color/gray_300" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/imageview_indian_meal"
                    android:layout_width="380dp"
                    android:layout_height="255dp"
                    android:layout_marginStart="@dimen/spaceMedium"
                    android:layout_marginTop="@dimen/spaceMedium"
                    android:layout_marginEnd="@dimen/spaceMedium"
                    android:elevation="1dp"
                    android:src="@drawable/img_meal"
                    app:roundPercent="0.2" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textview_headline_ingredients"
                style="@style/indian_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                android:text="@string/titleThree" />

            <TextView
                android:id="@+id/textview_details_ingredients"
                style="@style/indian_food.indian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceSmall"
                android:text="@string/blockThree" />

            <TextView
                android:id="@+id/textview_headline_regional_cuisine"
                style="@style/indian_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                android:text="@string/titleFour" />

            <TextView
                android:id="@+id/textview_details_regional_cuisine"
                style="@style/indian_food.indian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceSmall"
                android:layout_marginBottom="@dimen/spaceMedium"
                android:text="@string/blockFour" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>